--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "PORT=80 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
